# rust_module1

./: .gitignore
app/: Cargo.toml  camt053.xml  out.mt940  output.csv  output.mt940
app/src/: args.rs  main.rs
parsing/: Cargo.toml  camt053.xml  in_data.csv  new.xml  out.mt940  statement.mt940  test.xml
parsing/examples/: commands.txt
parsing/formats/: Sources.md
parsing/src/: cam.rs  cam_struct.rs  camt053.rs  csv_parsing.rs  error.rs  lib.rs  mt940_parsing.rs
